@@ -1,0 +1,23 @@
+# tvscraper override.conf
+# -----------------------------------------------------------------
+# Usage
+# -----------------------------------------------------------------
+# ignore EPG Entries or recordings with title "string" completely
+# -----------------------------------------------------------------
+# ignore;string
+# -----------------------------------------------------------------
+# define scrap type if type of EPG event or recording with title 
+# "string" is not detected correctly
+# type is either "series" or "movie"
+# -----------------------------------------------------------------
+# settype;string;type
+# -----------------------------------------------------------------
+# always substitute search string of EPG event or recording with 
+# title "string" with "substitution"
+# -----------------------------------------------------------------
+# substitute;string;substitution
+# -----------------------------------------------------------------
+
+ignore;Galileo
+settype;Tatort;series
+settype;Sherlock;series
